[package]
name = "saveboard"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
clap = {version = "4.0.32", features = ["derive"]}
color-eyre = "0.6.2"
home = "0.5.4"
image = "0.24.5"
