[package]
name = "saveboard"
description = "A CLI app for saving images from your clipboard"
authors = ["Clay66"]
version = "0.1.0"
edition = "2021"
license = "GPL-3.0"
readme = "README.md"
repository = "https://github.com/Clay-6/Saveboard"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
arboard = "3.2.0"
clap = {version = "4.0.32", features = ["derive"]}
color-eyre = "0.6.2"
home = "0.5.4"
image = "0.24.5"
